--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-@import url(//cdn.jsdelivr.net/npm/mdui@1.0.1/dist/css/mdui.min.css);
-@import url(//cdn.jsdelivr.net/npm/plyr@3.6.8/dist/plyr.min.css);
-@import url(css/app.666f6e74.css);
-@import url(css/app.6461726b.css);
+    @import url(//cdn.jsdelivr.net/npm/mdui@1.0.1/dist/css/mdui.min.css);
+    @import url(//cdn.jsdelivr.net/npm/plyr@3.6.8/dist/plyr.min.css);
+    @import url(https://cdn.jsdelivr.net/gh/mahdikhosravi1383/bestgoindextheme@main/css/app.666f6e74.css);
+    @import url(https://cdn.jsdelivr.net/gh/mahdikhosravi1383/bestgoindextheme@main/css/app.6461726b.css);
