--- a/style1.css
+++ b/style1.css
@@ -2,3 +2,4 @@
 @import url(//cdn.jsdelivr.net/npm/plyr@3.6.8/dist/plyr.min.css);
 @import url(css/app.666f6e74.css);
 @import url(css/app.6461726b.css);
+@import url(css/app.6c69676874.css);
